# IDDP

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yaml
backend/: .dockerignore  Dockerfile
frontend/: .dockerignore  Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: IndiaMapSection.jsx  MaharashtraMapSection.jsx
tests/: test_main.py
